Changed Colors and fixed small bugs such as missalignments.

--- a/src/Components/Component.css
+++ b/src/Components/Component.css
@@ -1,29 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat&display=swap");
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	font-family: Helvetica, sans-serif;;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
 }
 
 :root {
-	--mainColor: #dc3545;
-	--mainColorLight: #ce5360;
-	--secondaryColor: rgb(49, 9, 9);
-	--textColor: #eee;
+  --mainColor: #a6e7ff;
+  --mainColorLight: #c7f0ff;
+  --secondaryColor: #1c6a86;
+  --textColor: rgb(0, 0, 0);
 }
 
 header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	height: 80px;
-	padding: 0 2rem;
-	background-color: var(--mainColor);
-	color: var(--textColor);
-	z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding: 0 2rem;
+  background-color: var(--mainColor);
+  color: var(--textColor);
+  z-index: 9999;
 }
 
 header .logo a {
@@ -32,184 +32,180 @@ header .logo a {
 }
 
 nav {
-	display: inline;
-	justify-content: space-between;
+  display: inline;
+  justify-content: space-between;
 }
 
 nav a {
-	margin: 1.5rem 1rem;
-	color: var(--textColor);
-	text-decoration: none;
+  margin: 1.5rem 1rem;
+  color: var(--textColor);
+  text-decoration: none;
 }
 
 nav a:hover {
-	color: var(--secondaryColor);
+  color: var(--secondaryColor);
 }
 
 header .nav-btn {
-	padding: 5px;
-	cursor: pointer;
-	background: transparent;
-	border: none;
-	outline: none;
-	color: var(--textColor);
-	visibility: hidden;
-	opacity: 0;
-	font-size: 1.8rem;
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--textColor);
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
 }
 
 header div,
 nav {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 header h4 {
-	font-family:'Monoton', cursive;
-	color: var(--textColor);
-	font-size: 24px;
+  font-family: "Monoton", cursive;
+  color: var(--textColor);
+  font-size: 24px;
 }
 
 @media only screen and (max-width: 1200px) {
-	header .nav-btn {
-		visibility: visible;
-		opacity: 1;
-	}
+  header .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
 
-	header nav {
-		position: fixed;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		gap: 1.5rem;
-		background-color: var(--mainColor);
-		transition: 1s;
-		transform: translateY(-200vh);
-	}
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: var(--mainColor);
+    transition: 1s;
+    transform: translateY(-200vh);
+  }
 
-	nav Link:active {
-		transition: 1s;
-		transform: translateY(200vh);
-	}
+  nav Link:active {
+    transition: 1s;
+    transform: translateY(200vh);
+  }
 
-	header .responsive_nav {
-		transform: none;
-	}
+  header .responsive_nav {
+    transform: none;
+  }
 
-	nav .nav-close-btn {
-		position: absolute;
-		top: 2rem;
-		right: 2rem;
-	}
+  nav .nav-close-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
 
-	nav a {
-		font-size: 1.5rem;
-	}
+  nav a {
+    font-size: 1.5rem;
+  }
 }
 
- @media only screen and (max-width: 800px) {
-	header nav {
-		position: fixed;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		gap: 1.5rem;
-		background-color: var(--mainColor);
-		transition: 1s;
-		transform: translateY(-200vh);
-	}
-	nav {
-		width: 100%;
-	}
- }
-
+@media only screen and (max-width: 800px) {
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: var(--mainColor);
+    transition: 1s;
+    transform: translateY(-200vh);
+  }
+  nav {
+    width: 100%;
+  }
+}
 
 /*Footer*/
 
 .main-footer {
-	color: white;
-	background-color:var(--mainColor);
-	padding-top: 3em;
-	position: center;
-	bottom: 0px;
-	width: 100%;
-	flex: 1;
-	
-  }
-  
-  
-  .App {
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-  }
-  
-  
-  .page-container {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-  }
-  
-  .row {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	padding: 1rem;
-  }
-  
-  .content-wrap {
-	flex: 1;
-  }
-  .App {
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-  }
-  
-  .col {
-	display: grid;
-	padding: 2rem 2rem;
-  }
+  color: var(--textColor);
+  background-color: var(--mainColor);
+  padding-top: 3em;
+  position: center;
+  bottom: 0px;
+  width: 100%;
+  flex: 1;
+}
+
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.row {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem;
+}
+
+.content-wrap {
+  flex: 1;
+}
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.col {
+  display: grid;
+  padding: 2rem 2rem;
+}
 
 /*Pop*/
 
- .Wrapper {
-font-family: Helvetica, sans-serif;
-margin: 4rem 10%;
-display: inline-flexbox;
-justify-content: center;
- }
- .Card {
-min-height: 25rem;
-border-radius: 2rem;
-overflow: hidden;
-position: relative;
- }
-
- .Card img{
- border-radius: 2rem;
- position: absolute;
- left: 0;
- width: 100%;
- height: 100%;
- object-fit: cover;
-
+.Wrapper {
+  font-family: Helvetica, sans-serif;
+  margin: 4rem 10%;
+  display: inline-flexbox;
+  justify-content: center;
 }
-.Card p{
-  position: absolute; 
+.Card {
+  min-height: 25rem;
+  border-radius: 2rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.Card img {
+  border-radius: 2rem;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+    margin: 0 5px 5px 0;
+}
+.Card p {
+  position: absolute;
   z-index: 10;
   padding: 10px;
   bottom: 0%;
@@ -223,22 +219,22 @@ position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
- }
-
+}
 
 .Gradient {
-z-index: 3;
-position: absolute;
-width: 100%;
-height: 100%;
-background: linear-gradient(rgba(0,0,0,0), rgba(0, 0,0,0.5));
+  z-index: 3;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 }
 
 /*List*/
 
- .ListCard {
-font-family: Helvetica, sans-serif;
- }
+.ListCard {
+  font-family: Helvetica, sans-serif;
+
+}
 img {
   width: 90%;
   border-radius: 2rem;
@@ -246,6 +242,7 @@ img {
 
 .ListCard a {
   text-decoration: none;
+ 
 }
 
 .ListCard h4 {
@@ -254,15 +251,31 @@ img {
   color: #fff;
 }
 
+.ListCard img { 
+  border: 3px solid var(--textColor);
+}
 @media (max-width: 1200px) {
-	.ListCard {
-display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
-padding-top: 20px;
+  .ListCard {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+  }
 }
 
+.contact h2 {
+  color: var(--textColor);
+  border: 20px var(--secondaryColor);
+  font-family: Montserrat;
 }
 
+.Contact-List { 
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  text-decoration: none !important;
+  font-family:'Times New Roman', Times, serif;
+  color: #1c6a86 !important;
 
+}
