--- a/src/Pages/Pages.css
+++ b/src/Pages/Pages.css
@@ -1,18 +1,27 @@
+
+:root {
+    --mainColor: #a6e7ff;
+    --mainColorLight: #c7f0ff;
+    --secondaryColor: #1c6a86;
+    --textColor: rgb(0, 0, 0);
+  }
+
 .DetailWrapper {
 font-family: Helvetica, sans-serif;
 	margin-top: 10rem;
 	margin-bottom: 5rem;
     margin: 10px;
-	display:flex;
+	display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows:1fr;
     text-align: left;
     align-items: center;
-    flex-direction: column;
+    flex-direction:row !important;
 }
 @media (max-width: 1200px) {
     .DetailWrapper {
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 0px;
+        grid-template-columns:  1fr;
+        grid-template-rows:1fr;
    }
 }
    @media (max-width: 800px) {
@@ -21,16 +30,7 @@ font-family: Helvetica, sans-serif;
     width: 80%;
     height: auto;
   }
-  .headTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    margin: 0;
-    margin-left: 0rem;
-	margin-bottom: 2rem;
-  }
+  
    }
 h2 {
 	margin-bottom: 2rem;
@@ -44,15 +44,21 @@ h2 {
 }
 
 .headTitle {
-    background-color:  #a71d2a;
+    background-color:  var(--mainColor);
     padding: 1rem;
     display: inline;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     margin: 4rem;
-    
 }
+
+.title {
+    display: flex;
+    justify-content: center;
+    color: var(--textColor);
+}
+
 
 li {
 	font-size: 1.2rem;
@@ -79,10 +85,12 @@ img {
 	padding: 1rem 2rem;
     margin: 1rem;
 	background-color: var(--textColor);
-	border: 2px solid black;
+	border: 3px solid var(--mainColor);
+    border-radius: 10px;
 	margin-right: 2rem;
 	font-weight: 600;
-
+    color: var(--mainColorLight);
+    
 }
 
 .Info {
@@ -90,3 +98,6 @@ img {
 margin: 30px;
 
 }
+
+
+
